--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,14 +1,12 @@
 [phases.setup]
-nixPkgs = ["php82", "php82Extensions.mysqli", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "php82Extensions.openssl", "php82Extensions.curl", "php82Extensions.mbstring", "php82Extensions.fileinfo", "apache2"]
+nixPkgs = ["php82", "php82Extensions.mysqli", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "php82Extensions.openssl", "php82Extensions.curl", "php82Extensions.mbstring", "php82Extensions.fileinfo"]
 
 [phases.build]
 cmds = [
-  "cp -r . /var/www/html/",
-  "chmod -R 755 /var/www/html/",
-  "mkdir -p /var/www/html/uploads/tickets",
-  "mkdir -p /var/www/html/uploads/avatars", 
-  "chmod -R 777 /var/www/html/uploads/"
+  "mkdir -p uploads/tickets",
+  "mkdir -p uploads/avatars", 
+  "chmod -R 777 uploads/"
 ]
 
 [start]
-cmd = "apache2-foreground" 
+cmd = "php -S 0.0.0.0:$PORT router.php" 
