Eliminar archivos de framework Laravel innecesarios y agregar index.html para Railway

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 configuracion.php
 config_local.php
 
+# Archivos de framework que no usamos
+composer.json
+composer.lock
+artisan
+vendor/
+
 # Archivos temporales
 *.tmp
 *.temp
